# django-dynamic-file

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  test_settings.py
.github/workflows/: coverage.yml  lint.yml  publish.yml  test.yml  tests.yml
docs/: src
docs/source/: api.rst  changelog.rst  conf.py  configuration.rst  dynamic_file.migrations.rst  dynamic_file.models.rst  dynamic_file.rst  index.rst  installation.rst  modules.rst  test_app.migrations.rst  test_app.rst  test_settings.rst  usage.rst
dynamic_file/: admin.py  apps.py  config.py  storage.py
dynamic_file/migrations/: 0001_initial.py  0002_alter_dynamicfile_file.py  0002_dynamicfile.py  0003_alter_dynamicfile_uploaded_by.py  0004_dynamicfile_created_at_dynamicfile_updated_at.py
dynamic_file/models/: __init__.py  base.py  file.py
dynamic_file/serializers/: __init__.py  dynamic_file.py  fields.py
dynamic_file/tests/: helpers.py  test_model_file.py
dynamic_file/views/: __init__.py  serve_file.py
test_app/: admin.py  models.py  serializers.py  urls.py  views.py
test_app/migrations/: 0001_initial.py  0002_testmodel_name.py  0003_testmodelonetoone.py
tests/: helpers.py  test_admin.py  test_model_file.py  test_serializer_file.py  test_view_serve.py
