# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dynamic-file"
version = "0.5.0"
description = "A flexible approach to handling and serving files with django"
readme = "README.rst"
authors = [{ name = "Philipp Hafner", email = "philipp@hafner.xyz" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = ["django", "file"]
dependencies = [
    "djangorestframework >= 3.12.4",
    "Django >= 3.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Hafnernuss/django-dynamic-file"

[tool.setuptools]
package-dir = {"dynamic_file" = "dynamic_file"}


[tool.bumpver]
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
current_version = "0.5.0"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
